{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 132,
  "lineage": "dfdbca69-7e28-d438-6a0e-e2364193038c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a588942e90cfecc9",
            "arn": "arn:aws:ec2:us-west-2:438465147858:instance/i-00f8ec1fb0397aa75",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wizex-mongo-instance-profile",
            "id": "i-00f8ec1fb0397aa75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wiz-exercise",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05731b3ed1065ae0d",
            "private_dns": "ip-10-0-1-189.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-54-212-63-201.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.63.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c59d66873498936",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ed65136a1d78dc2",
            "tags": {
              "Name": "wizex-mongo-vm"
            },
            "tags_all": {
              "Name": "wizex-mongo-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024b3dbeb73f95892",
              "sg-0a73038fecc46ddcf"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.mongo_instance_profile",
            "aws_iam_role.mongo_ec2_role",
            "aws_s3_bucket.mongo_backups",
            "aws_security_group.sg_eks_nodes",
            "aws_security_group.sg_mongo_db",
            "aws_security_group.sg_mongo_ssh",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_iam_policy_document.ec2_assume_role",
            "data.aws_ssm_parameter.ubuntu_bionic_ami",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438465147858:internet-gateway/igw-01c244f6b31952568",
            "id": "igw-01c244f6b31952568",
            "owner_id": "438465147858",
            "tags": {
              "Name": "wizex-igw"
            },
            "tags_all": {
              "Name": "wizex-igw"
            },
            "vpc_id": "vpc-0bc149119c79e50f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c244f6b31952568",
            "id": "r-rtb-06bc15f0ff1bc694e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06bc15f0ff1bc694e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438465147858:route-table/rtb-06bc15f0ff1bc694e",
            "id": "rtb-06bc15f0ff1bc694e",
            "owner_id": "438465147858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c244f6b31952568",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wizex-public-rt"
            },
            "tags_all": {
              "Name": "wizex-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc149119c79e50f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0111b40fd8fcb7d5c",
            "route_table_id": "rtb-06bc15f0ff1bc694e",
            "subnet_id": "subnet-008860cd930567a5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.private2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3707b95c025bd23",
            "route_table_id": "rtb-06bc15f0ff1bc694e",
            "subnet_id": "subnet-03ed65136a1d78dc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438465147858:security-group/sg-0273d98a169a3f82e",
            "description": "Allow node-to-node traffic and all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0273d98a169a3f82e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all node-to-node traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "wizex-sg-eks-nodes",
            "name_prefix": "",
            "owner_id": "438465147858",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wizex-sg-eks-nodes"
            },
            "tags_all": {
              "Name": "wizex-sg-eks-nodes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc149119c79e50f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_mongo_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438465147858:security-group/sg-0a73038fecc46ddcf",
            "description": "Allow port 27017 only from EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a73038fecc46ddcf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB from EKS nodes",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0273d98a169a3f82e"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "wizex-sg-mongo-db",
            "name_prefix": "",
            "owner_id": "438465147858",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wizex-sg-mongo-db"
            },
            "tags_all": {
              "Name": "wizex-sg-mongo-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc149119c79e50f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_mongo_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438465147858:security-group/sg-024b3dbeb73f95892",
            "description": "Allow SSH from anywhere to Mongo VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024b3dbeb73f95892",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wizex-sg-mongo-ssh",
            "name_prefix": "",
            "owner_id": "438465147858",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wizex-sg-mongo-ssh"
            },
            "tags_all": {
              "Name": "wizex-sg-mongo-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc149119c79e50f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438465147858:subnet/subnet-0393e9603c4959e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0393e9603c4959e72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465147858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wizex-private-subnet"
            },
            "tags_all": {
              "Name": "wizex-private-subnet"
            },
            "vpc_id": "vpc-0bc149119c79e50f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438465147858:subnet/subnet-008860cd930567a5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008860cd930567a5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465147858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wizex-private-subnet-2"
            },
            "tags_all": {
              "Name": "wizex-private-subnet-2"
            },
            "vpc_id": "vpc-0bc149119c79e50f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438465147858:subnet/subnet-03ed65136a1d78dc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ed65136a1d78dc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465147858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wizex-public-subnet"
            },
            "tags_all": {
              "Name": "wizex-public-subnet"
            },
            "vpc_id": "vpc-0bc149119c79e50f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438465147858:vpc/vpc-0bc149119c79e50f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8e48a3ad578593d",
            "default_route_table_id": "rtb-03d2f554978eb16ec",
            "default_security_group_id": "sg-02e8b1a3aa9c0dec9",
            "dhcp_options_id": "dopt-01b054fea8fe38543",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc149119c79e50f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d2f554978eb16ec",
            "owner_id": "438465147858",
            "tags": {
              "Name": "wizex-vpc"
            },
            "tags_all": {
              "Name": "wizex-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}